Enabled private single file download

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -10,10 +10,10 @@
 
   <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-  <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
+  <link href="/bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Paytone+One'>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body ng-controller="Controller">
@@ -91,22 +91,22 @@
     </div>
   </div>
 
-  <script src="bower_components/jquery/dist/jquery.js"></script>
-  <script src="bower_components/ng-file-upload/angular-file-upload-html5-shim.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/restangular/dist/restangular.js"></script>
-  <script src="bower_components/ngSocket/dist/ngSocket.js"></script>
-  <script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="bower_components/lodash/dist/lodash.js"></script>
-  <script src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
-  <script src="bower_components/jquery-knob/js/jquery.knob.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
+  <script src="/bower_components/jquery/dist/jquery.js"></script>
+  <script src="/bower_components/ng-file-upload/angular-file-upload-html5-shim.js"></script>
+  <script src="/bower_components/angular/angular.js"></script>
+  <script src="/bower_components/angular-route/angular-route.js"></script>
+  <script src="/bower_components/restangular/dist/restangular.js"></script>
+  <script src="/bower_components/ngSocket/dist/ngSocket.js"></script>
+  <script src="/bower_components/ng-file-upload/angular-file-upload.js"></script>
+  <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="/bower_components/lodash/dist/lodash.js"></script>
+  <script src="/bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
+  <script src="/bower_components/jquery-knob/js/jquery.knob.js"></script>
+  <script src="/js/main.js"></script>
+  <script src="/js/services.js"></script>
+  <script src="/js/controllers.js"></script>
+  <script src="/js/filters.js"></script>
+  <script src="/js/directives.js"></script>
 
   <script>
     (function(b, o, i, l, e, r) {
