Added support for mobile browsers

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -62,10 +62,10 @@
   <div class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 text-muted">
+        <div class="col-md-6 col-xs-6 text-muted">
           Lytup v<span app-version></span>
         </div>
-        <div class="col-md-6 text-center text-muted social-icon">
+        <div class="col-md-6 col-xs-6 text-center text-muted social-icon">
           <span class="facebook-icon">
             <a href="https://www.facebook.com/Lytup" target="_blank">
               <i class="fa fa-facebook-square fa-2x"></i>
