Added expiry information to web app

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="col-md-6 col-xs-6 text-center text-muted social-icon">
           <span class="facebook-icon">
-            <a href="https://www.facebook.com/Lytup" target="_blank">
+            <a href="https://www.facebook.com/labstack" target="_blank">
               <i class="fa fa-facebook-square fa-2x"></i>
             </a>
           </span>
@@ -102,6 +102,7 @@
   <script src="/bower_components/lodash/dist/lodash.js"></script>
   <script src="/bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
   <script src="/bower_components/jquery-knob/js/jquery.knob.js"></script>
+  <script src="/bower_components/moment/moment.js"></script>
   <script src="/js/main.js"></script>
   <script src="/js/services.js"></script>
   <script src="/js/controllers.js"></script>
