--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,7 +11,7 @@
   <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
-  <link href="/bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css">
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Paytone+One'>
   <link rel="stylesheet" href="/css/main.css">
 </head>
@@ -34,7 +34,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">
+        <a href="/" class="navbar-brand">
           <i class="fa fa-cloud"></i> Lytup
         </a>
       </div>
@@ -98,7 +98,8 @@
   <script src="/bower_components/restangular/dist/restangular.js"></script>
   <script src="/bower_components/ngSocket/dist/ngSocket.js"></script>
   <script src="/bower_components/ng-file-upload/angular-file-upload.js"></script>
-  <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+  <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="/bower_components/lodash/dist/lodash.js"></script>
   <script src="/bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
   <script src="/bower_components/jquery-knob/js/jquery.knob.js"></script>
