Added signout feature

--- a/web/public/tpl/home.html
+++ b/web/public/tpl/home.html
@@ -1,53 +1,54 @@
-<div class="row home-panel">
-  <div class="col-md-4 col-xs-4 menu-left">
-    <ul class="list-inline">
-      <li>
-        <button type="button" class="btn btn-default btn-cir"
-            tooltip="Edit">
-          <i class="fa fa-pencil fa-lg"></i>
-        </button>
-      </li>
-    </ul>
-  </div>
-  <div class="col-md-4 col-xs-4 menu-center">
-    <h4>{{folders.length}} FOLDERS</h4>
-  </div>
-  <div class="col-md-4 col-xs-4 menu-right">
-    <ul class="list-inline">
-      <li>
-        <button type="button" class="btn btn-primary" ng-click="createFolder()">
-          <i class="fa fa-plus"></i> New Folder
-        </button>
-      </li>
-    </ul>
-  </div>
-</div>
+<div ng-if="!user.token" ng-include="'/tpl/landing.html'"></div>
 
-<div class="row grid">
-  <div class="col-md-3 col-sm-4 col-xs-12"
-      ng-repeat="fol in folders | orderBy:'-createdAt'">
-    <div class="center-block grid-item">
-      <div class="grid-item-action">
-        <ul class="list-inline">
-          <li>
-            <a ng-href="/d/{{fol.id}}" ly-download tooltip="Download">
-              <i class="fa fa-download fa-lg"></i>
-            </a>
-          </li>
-          <li>
-            <a ng-click="deleteFolder(fol, -($index + 1))" tooltip="Delete">
-              <i class="fa fa-trash-o fa-lg"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <a ng-href="/{{fol.id}}">
-        <div class="grid-item-holder">
-          <div class="grid-item-info">
-            <h5>{{fol.id}} <small>{{fol.files.length}} Files</small></h5>
-          </div>
+<div ng-if="user.token">
+  <div class="row home-panel">
+    <div class="col-md-4 col-xs-4 menu-left">
+      <ul class="list-inline">
+        <li>
+          <button type="button" class="btn btn-default btn-cir" tooltip="Edit">
+            <i class="fa fa-pencil fa-lg"></i>
+          </button>
+        </li>
+      </ul>
+    </div>
+    <div class="col-md-4 col-xs-4 menu-center">
+      <h4>{{folders.length}} FOLDERS</h4>
+    </div>
+    <div class="col-md-4 col-xs-4 menu-right">
+      <ul class="list-inline">
+        <li>
+          <button type="button" class="btn btn-primary" ng-click="createFolder()">
+            <i class="fa fa-plus"></i> New Folder
+          </button>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="row grid">
+    <div class="col-md-3 col-sm-4 col-xs-12" ng-repeat="fol in folders | orderBy:'-createdAt'">
+      <div class="center-block grid-item">
+        <div class="grid-item-action">
+          <ul class="list-inline">
+            <li>
+              <a ng-href="/d/{{fol.id}}" ly-download tooltip="Download">
+                <i class="fa fa-download fa-lg"></i>
+              </a>
+            </li>
+            <li>
+              <a ng-click="deleteFolder(fol, -($index + 1))" tooltip="Delete">
+                <i class="fa fa-trash-o fa-lg"></i>
+              </a>
+            </li>
+          </ul>
         </div>
-      </a>
+        <a ng-href="/{{fol.id}}">
+          <div class="grid-item-holder">
+            <div class="grid-item-info">
+              <h5>{{fol.id}} <small>{{fol.files.length}} Files</small></h5>
+            </div>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
 </div>
