--- a/web/public/index.html
+++ b/web/public/index.html
@@ -13,10 +13,11 @@
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css">
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Paytone+One'>
+  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans'>
   <link rel="stylesheet" href="/css/main.css">
 </head>
 
-<body ng-controller="Controller">
+<body ng-controller="HomeCtrl">
 
   <!--[if lt IE 10]>
     <p class="browse-happy">
@@ -35,21 +36,20 @@
           <span class="icon-bar"></span>
         </button>
         <a href="/" class="navbar-brand">
-          <i class="fa fa-cloud"></i> Lytup
+          <i class="fa fa-cloud"></i> LYTUP
         </a>
       </div>
       <div class="collapse navbar-collapse">
         <!-- <ul class="nav navbar-nav">
           <li class="active">
-            <a href="#">Home</a>
-          </li>
-          <li>
-            <a href="#about">About</a>
-          </li>
-          <li>
-            <a href="#contact">Contact</a>
+            <a href="/home">HOME</a>
           </li>
         </ul> -->
+        <ul class="nav navbar-nav navbar-right">
+          <li ng-if="user.token">
+            <a href="" ng-click="signout()">SIGN OUT</a>
+          </li>
+        </ul>
       </div>
       <!--/.nav-collapse -->
     </div>
