Fixed delete file and folder, added ajax loader.

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -12,6 +12,7 @@
 
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="/bower_components/angular-loading-bar/build/loading-bar.css">
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Paytone+One'>
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans'>
   <link rel="stylesheet" href="/css/main.css">
@@ -95,11 +96,13 @@
   <script src="/bower_components/ng-file-upload/angular-file-upload-html5-shim.js"></script>
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
+  <script src="/bower_components/angular-animate/angular-animate.js"></script>
   <script src="/bower_components/restangular/dist/restangular.js"></script>
   <script src="/bower_components/ngSocket/dist/ngSocket.js"></script>
   <script src="/bower_components/ng-file-upload/angular-file-upload.js"></script>
   <script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
   <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="/bower_components/angular-loading-bar/build/loading-bar.js"></script>
   <script src="/bower_components/lodash/dist/lodash.js"></script>
   <script src="/bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
   <script src="/bower_components/jquery-knob/js/jquery.knob.js"></script>
