--- a/web/public/tpl/home.html
+++ b/web/public/tpl/home.html
@@ -35,7 +35,7 @@
               </a>
             </li>
             <li>
-              <a ng-click="deleteFolder(fol, -($index + 1))" tooltip="Delete">
+              <a ng-click="deleteFolder(fol)" tooltip="Delete">
                 <i class="fa fa-trash-o fa-lg"></i>
               </a>
             </li>
