--- a/web/public/tpl/landing.html
+++ b/web/public/tpl/landing.html
@@ -22,13 +22,13 @@
   </div>
 
   <div class="get-started">
-    <button type="button" class="btn btn-success btn-lg" ng-click="openSignup()">
+    <button type="button" class="btn btn-success btn-lg" ng-click="signupModal()">
       <i class="fa fa-paw fa-lg"></i> Sign Up
     </button>
     <div>
       <h4>
         <small>or</small>
-        <a href="" ng-click="openSignin()">Sign In</a>
+        <a href="" ng-click="signinModal()">Sign In</a>
       </h4>
     </div>
   </div>
