--- a/web/public/tpl/modals/folder.html
+++ b/web/public/tpl/modals/folder.html
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group" ng-class="{'has-error': form.expiry.$invalid && form.expiry.$dirty}">
       <select name="expiry" class="form-control" required ng-model="folder.expiry" ng-options="e.val as e.lbl for e in expiries">
-        <option value="">Expiry</option>
+        <option value="">Set Expiry</option>
       </select>
     </div>
   </form>
