--- a/web/public/tpl/folder.html
+++ b/web/public/tpl/folder.html
@@ -19,7 +19,7 @@
         <li class="label label-default">{{folder.name}}</li>
         <li class="label label-default">
           {{folder.files.length}}
-          <ng-pluralize count="folders.length"
+          <ng-pluralize count="folder.files.length"
               when="{'1': 'FILE', 'other': 'FILES'}">
           </ng-pluralize>
         </li>
