--- a/web/public/tpl/modals/signin.html
+++ b/web/public/tpl/modals/signin.html
@@ -7,15 +7,15 @@
 <div class="modal-body">
   <form role="form" name="form">
     <div class="form-group" ng-class="{'has-error': form.email.$invalid && form.email.$dirty}">
-      <input type="email" name="email" class="form-control" placeholder="Email" required ng-model="user.email">
+      <input type="email" name="email" class="form-control" placeholder="Email" required ng-model="user.email" ng-model-options="{updateOn: 'blur'}">
     </div>
     <div class="form-group" ng-class="{'has-error': form.password.$invalid && form.password.$dirty}">
-      <input type="password" name="password" class="form-control" placeholder="Password" required ng-model="user.password">
+      <input type="password" name="password" class="form-control" placeholder="Password" required ng-model="user.password" ng-model-options="{updateOn: 'blur'}">
     </div>
   </form>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" ng-disabled="form.$invalid" ng-click="signin(user)">
+  <button type="submit" class="btn btn-primary" ng-disabled="form.$invalid" ng-click="signin(user)">
     Sign In
   </button>
 </div>
