--- a/web/public/tpl/modals/signup.html
+++ b/web/public/tpl/modals/signup.html
@@ -8,20 +8,20 @@
   <form role="form" name="form">
     <div class="form-group" ng-class="{'has-error': form.name.$invalid && form.name.$dirty}">
       <input type="text" name="name" class="form-control" placeholder="Name" required
-        ng-model="user.name">
+        ng-model="user.name" ng-model-options="{updateOn: 'blur'}">
     </div>
     <div class="form-group" ng-class="{'has-error': form.email.$invalid && form.email.$dirty}">
       <input type="email" name="email" class="form-control" placeholder="Email" required
-        ng-model="user.email">
+        ng-model="user.email" ng-model-options="{updateOn: 'blur'}">
     </div>
     <div class="form-group" ng-class="{'has-error': form.password.$invalid && form.password.$dirty}">
       <input type="password" name="password" class="form-control" placeholder="Password"
-        required ng-model="user.password">
+        required ng-model="user.password" ng-model-options="{updateOn: 'blur'}">
     </div>
   </form>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" ng-disabled="form.$invalid" ng-click="signup(user)">
+  <button type="submit" class="btn btn-primary" ng-disabled="form.$invalid" ng-click="signup(user)">
     Sign Up
   </button>
 </div>
