--- a/web/public/tpl/modals/folder.html
+++ b/web/public/tpl/modals/folder.html
@@ -7,21 +7,21 @@
     <span ng-if="folder.id">Edit Folder</span>
   </h4>
 </div>
-<div class="modal-body">
-  <form role="form" name="form">
+<form role="form" name="form" novalidate ng-submit="form.$valid && save(folder)">
+  <div class="modal-body">
     <div class="form-group" ng-class="{'has-error': form.name.$invalid && form.name.$dirty}">
       <input type="text" name="name" class="form-control" placeholder="Name" required ng-model="folder.name" ng-model-options="{updateOn: 'blur'}">
     </div>
     <div class="form-group" ng-class="{'has-error': form.expiry.$invalid && form.expiry.$dirty}">
-      <select name="expiry" class="form-control" required ng-model="folder.expiry" ng-model-options="{updateOn: 'blur'}" ng-options="e.val as e.lbl for e in expiries">
+      <select name="expiry" class="form-control" required ng-model="folder.expiry" ng-options="e.val as e.lbl for e in expiries">
         <option value="">Set Expiry</option>
       </select>
     </div>
-  </form>
-</div>
-<div class="modal-footer">
-  <button type="submit" class="btn btn-primary" ng-disabled="form.$invalid" ng-click="save(folder)">
-    <span ng-if="!folder.id">Create</span>
-    <span ng-if="folder.id">Update</span>
-  </button>
-</div>
+  </div>
+  <div class="modal-footer">
+    <button type="submit" class="btn btn-primary">
+      <span ng-if="!folder.id">Create</span>
+      <span ng-if="folder.id">Update</span>
+    </button>
+  </div>
+</form>
