--- a/web/public/tpl/modals/signin.html
+++ b/web/public/tpl/modals/signin.html
@@ -4,18 +4,18 @@
   </button>
   <h4 class="modal-title">Sign In</h4>
 </div>
-<div class="modal-body">
-  <form role="form" name="form">
+<form role="form" name="form" novalidate ng-submit="form.$valid && signin(user)">
+  <div class="modal-body">
     <div class="form-group" ng-class="{'has-error': form.email.$invalid && form.email.$dirty}">
       <input type="email" name="email" class="form-control" placeholder="Email" required ng-model="user.email" ng-model-options="{updateOn: 'blur'}">
     </div>
     <div class="form-group" ng-class="{'has-error': form.password.$invalid && form.password.$dirty}">
       <input type="password" name="password" class="form-control" placeholder="Password" required ng-model="user.password" ng-model-options="{updateOn: 'blur'}">
     </div>
-  </form>
-</div>
-<div class="modal-footer">
-  <button type="submit" class="btn btn-primary" ng-disabled="form.$invalid" ng-click="signin(user)">
-    Sign In
-  </button>
-</div>
+  </div>
+  <div class="modal-footer">
+    <button type="submit" class="btn btn-primary">
+      Sign In
+    </button>
+  </div>
+</form>
