--- a/web/public/tpl/folder.html
+++ b/web/public/tpl/folder.html
@@ -68,7 +68,7 @@
 <div class="row grid">
   <div class="col-md-3 col-sm-4 col-xs-12" ng-repeat="file in folder.files | orderBy:'-createdAt'">
     <div class="center-block grid-item">
-      <div class="grid-item-holder" ng-init="show=false" ng-mouseover="show=true" ng-mouseleave="show=false"
+      <div class="grid-item-holder" ng-mouseover="show=true" ng-mouseleave="show=false"
           ng-style="{'background-image': file.thumbnailUri ? 'url(' + file.thumbnailUri + ')' : ''}">
         <div class="grid-item-top" ng-show="show">
           <ul class="list-inline">
@@ -86,10 +86,10 @@
         </div>
         <div ly-dead-center>
           <a ng-href="/i/{{file.id}}">
-            <i class="fa fa-file-o fa-5x" ng-style="{opacity: file.thumbnailUri ? 0 : 1}"></i>
+            <i class="fa fa-5x fa-file-o" ng-class="fileIcon(file.type)" ng-style="{opacity: file.thumbnailUri ? 0 : 1}"></i>
           </a>
         </div>
-        <div class="grid-item-progress" ng-if="file.loaded !== 100">
+        <div class="grid-item-progress" ng-show="file.loaded" ng-hide="file.uri">
           <input value="{{file.loaded}}" ly-knob data-width="50" data-height="50" data-fgcolor="#45aeea" data-bgcolor="#bee3f7" data-thickness=".1">
         </div>
       </div>
