--- a/web/public/tpl/folder.html
+++ b/web/public/tpl/folder.html
@@ -16,7 +16,7 @@
   <div class="col-md-6 col-xs-6 menu-center">
     <h4>
       <ul class="list-inline">
-        <li class="label label-default">{{folder.name}}</li>
+        <li>{{folder.name}}</li>
         <li class="label label-default">
           {{folder.files.length}}
           <ng-pluralize count="folder.files.length"
@@ -66,10 +66,10 @@
 </div>
 
 <div class="row grid">
-  <div class="col-md-3 col-sm-4 col-xs-12" ng-repeat="file in folder.files | orderBy:'-createdAt'">
+  <div class="col-md-3 col-sm-4 col-xs-12" ng-repeat="file in folder.files">
     <div class="center-block grid-item">
       <div class="grid-item-holder" ng-mouseover="show=true" ng-mouseleave="show=false"
-          ng-style="{'background-image': file.thumbnailUri ? 'url(' + file.thumbnailUri + ')' : ''}">
+          ng-style="{'background-image': file.thumbnail ? 'url(data:image/png;base64,' + file.thumbnail + ')' : ''}">
         <div class="grid-item-top" ng-show="show">
           <ul class="list-inline">
             <li>
@@ -86,7 +86,7 @@
         </div>
         <div ly-dead-center>
           <a ng-href="/i/{{file.id}}">
-            <i class="fa fa-5x fa-file-o" ng-class="fileIcon(file.type)" ng-style="{opacity: file.thumbnailUri ? 0 : 1}"></i>
+            <i class="fa fa-5x fa-file-o" ng-class="fileIcon(file.type)" ng-style="{opacity: file.thumbnail ? 0 : 1}"></i>
           </a>
         </div>
         <div class="grid-item-progress" ng-show="file.loaded" ng-hide="file.uri">
