--- a/web/public/tpl/modals/folder.html
+++ b/web/public/tpl/modals/folder.html
@@ -7,15 +7,21 @@
     <span ng-if="folder.id">Edit Folder</span>
   </h4>
 </div>
-<form role="form" name="form" novalidate ng-submit="form.$valid && save(folder)">
+<form role="form" name="form" novalidate ng-submit="validate(form, errors) && save(folder)">
   <div class="modal-body">
-    <div class="form-group" ng-class="{'has-error': form.name.$invalid && form.name.$dirty}">
-      <input type="text" name="name" class="form-control" placeholder="Name" required ng-model="folder.name" ng-model-options="{updateOn: 'blur'}">
+    <div class="form-group" ng-class="{'has-error': errors.blankName}">
+      <input type="text" name="name" class="form-control" placeholder="Name" required ng-model="folder.name" ng-blur="validateName(form, errors)">
+      <p ng-show="errors.blankName" class="help-block">
+        {{MESSAGE('blankName')}}
+      </p>
     </div>
-    <div class="form-group" ng-class="{'has-error': form.expiry.$invalid && form.expiry.$dirty}">
+    <div class="form-group" ng-class="{'has-error': errors.blankExpiry}">
       <select name="expiry" class="form-control" required ng-model="folder.expiry" ng-options="e.val as e.lbl for e in expiries">
         <option value="">Set Expiry</option>
       </select>
+      <p ng-show="errors.blankExpiry" class="help-block">
+        {{MESSAGE('blankExpiry')}}
+      </p>
     </div>
   </div>
   <div class="modal-footer">
