--- a/web/public/tpl/modals/signup.html
+++ b/web/public/tpl/modals/signup.html
@@ -4,19 +4,31 @@
   </button>
   <h4 class="modal-title">Sign Up</h4>
 </div>
-<form role="form" name="form" novalidate ng-submit="form.$valid && signup(user)">
+<form role="form" name="form" novalidate ng-submit="validate(form, errors) && signup()">
   <div class="modal-body">
-    <div class="form-group" ng-class="{'has-error': form.name.$invalid && form.name.$dirty}">
-      <input type="text" name="name" class="form-control" placeholder="Name" required
-        ng-model="user.name" ng-model-options="{updateOn: 'blur'}">
+    <div class="form-group" ng-class="{'has-error': errors.blankName}">
+      <input type="text" name="name" class="form-control" placeholder="Name" required ng-model="user.name" ng-blur="validateName(form, errors)">
+      <p ng-show="errors.blankName" class="help-block">
+        {{MESSAGE('blankName')}}
+      </p>
     </div>
-    <div class="form-group" ng-class="{'has-error': form.email.$invalid && form.email.$dirty}">
-      <input type="email" name="email" class="form-control" placeholder="Email" required
-        ng-model="user.email" ng-model-options="{updateOn: 'blur'}">
+    <div class="form-group" ng-class="{'has-error': errors.blankEmail || errors.invalidEmail}">
+      <input type="email" name="email" class="form-control" placeholder="Email" required ng-model="user.email" ng-blur="validateEmail(form, errors)">
+      <p ng-show="errors.blankEmail" class="help-block">
+        {{MESSAGE('blankEmail')}}
+      </p>
+      <p ng-show="errors.invalidEmail" class="help-block">
+        {{MESSAGE('invalidEmail')}}
+      </p>
     </div>
-    <div class="form-group" ng-class="{'has-error': form.password.$invalid && form.password.$dirty}">
-      <input type="password" name="password" class="form-control" placeholder="Password"
-        required ng-model="user.password" ng-model-options="{updateOn: 'blur'}">
+    <div class="form-group" ng-class="{'has-error': errors.blankPassword || errors.invalidPassword}">
+      <input type="password" name="password" class="form-control" placeholder="Password" required ng-model="user.password" ng-minlength="6" ng-blur="validatePassword(form, errors)">
+      <p ng-show="errors.blankPassword" class="help-block">
+        {{MESSAGE('blankPassword')}}
+      </p>
+      <p ng-show="errors.invalidPassword" class="help-block">
+        {{MESSAGE('invalidPassword')}}
+      </p>
     </div>
   </div>
   <div class="modal-footer">
