--- a/web/public/tpl/modals/folder.html
+++ b/web/public/tpl/modals/folder.html
@@ -23,11 +23,11 @@
         {{MESSAGE('blankExpiry')}}
       </p>
     </div>
-  </div>
-  <div class="modal-footer">
-    <button type="submit" class="btn btn-primary">
-      <span ng-if="!folder.id">Create</span>
-      <span ng-if="folder.id">Update</span>
-    </button>
+    <div class="form-group text-center">
+      <button type="submit" class="btn btn-primary">
+        <span ng-if="!folder.id">Create</span>
+        <span ng-if="folder.id">Update</span>
+      </button>
+    </div>
   </div>
 </form>
