--- a/web/public/tpl/modals/signin.html
+++ b/web/public/tpl/modals/signin.html
@@ -6,7 +6,10 @@
 </div>
 <form role="form" name="form" novalidate ng-submit="validate(form, errors) && signin()">
   <div class="modal-body">
-    <div class="form-group" ng-class="{'has-error': errors.blankEmail || errors.invalidEmail}">
+    <div class="form-group" ng-class="{'has-error': errors.blankEmail || errors.invalidEmail || errors.loginFailed}">
+      <p ng-show="errors.loginFailed" class="help-block">
+        {{MESSAGE('loginFailed')}}
+      </p>
       <input type="email" name="email" class="form-control" placeholder="Email" required ng-model="user.email" ng-blur="validateEmail(form, errors)">
       <p ng-show="errors.blankEmail" class="help-block">
         {{MESSAGE('blankEmail')}}
@@ -15,7 +18,7 @@
         {{MESSAGE('invalidEmail')}}
       </p>
     </div>
-    <div class="form-group" ng-class="{'has-error': errors.blankPassword || errors.invalidPassword}">
+    <div class="form-group" ng-class="{'has-error': errors.blankPassword || errors.invalidPassword || errors.loginFailed}">
       <input type="password" name="password" class="form-control" placeholder="Password" required ng-model="user.password" ng-minlength="6"  ng-blur="validatePassword(form, errors)">
       <p ng-show="errors.blankPassword" class="help-block">
         {{MESSAGE('blankPassword')}}
@@ -24,10 +27,11 @@
         {{MESSAGE('invalidPassword')}}
       </p>
     </div>
-  </div>
-  <div class="modal-footer">
-    <button type="submit" class="btn btn-primary">
-      Sign In
-    </button>
+    <div class="form-group">
+      <a href="">Forgot password?</a>
+      <button type="submit" class="btn btn-primary pull-right">
+        Sign In
+      </button>
+    </div>
   </div>
 </form>
