--- a/web/public/tpl/landing.html
+++ b/web/public/tpl/landing.html
@@ -1,6 +1,6 @@
 <div class="landing">
   <div class="slogan">
-    <h1>Lytup <small>Simple file sharing</small></h1>
+    <h1>Lytup <small>Simple File Sharing</small></h1>
   </div>
 
   <div class="center-block features">
@@ -22,13 +22,13 @@
   </div>
 
   <div class="get-started">
-    <button type="button" class="btn btn-success btn-lg" ng-click="signupModal()">
+    <a href="/join" class="btn btn-success btn-lg">
       <i class="fa fa-paw fa-lg"></i> Sign Up
-    </button>
+    </a>
     <div>
       <h4>
         <small>or</small>
-        <a href="" ng-click="signinModal()">Sign In</a>
+        <a href="/login">Sign In</a>
       </h4>
     </div>
   </div>
