--- a/web/public/tpl/folder.html
+++ b/web/public/tpl/folder.html
@@ -30,7 +30,7 @@
           </span>
         </li>
         <li>
-          <a href="" ng-click="folderModal()">
+          <a href ng-click="folderModal()">
             <i class="fa fa-pencil"></i>
           </a>
         </li>
@@ -78,7 +78,7 @@
               </a>
             </li>
             <li>
-              <a href="" ng-click="deleteFile(file.id)" tooltip="Delete">
+              <a href ng-click="deleteFile(file.id)" tooltip="Delete">
                 <i class="fa fa-trash-o fa-lg"></i>
               </a>
             </li>
