--- a/web/public/tpl/modals/forgotpwd.html
+++ b/web/public/tpl/modals/forgotpwd.html
@@ -2,7 +2,7 @@
   <button type="button" class="close" ng-click="$dismiss('cancel')">
     &times;
   </button>
-  <h4 class="modal-title">Sign In</h4>
+  <h4 class="modal-title">Forgot Password</h4>
 </div>
 <form role="form" name="form" novalidate ng-submit="validate(form, errors) && submit()">
   <div class="modal-body">
@@ -18,19 +18,9 @@
         {{MESSAGE('invalidEmail')}}
       </p>
     </div>
-    <div class="form-group" ng-class="{'has-error': errors.blankPassword || errors.invalidPassword || errors.loginFailed}">
-      <input type="password" name="password" class="form-control" placeholder="Password" required ng-model="user.password" ng-minlength="6">
-      <p ng-show="errors.blankPassword" class="help-block">
-        {{MESSAGE('blankPassword')}}
-      </p>
-      <p ng-show="errors.invalidPassword" class="help-block">
-        {{MESSAGE('invalidPassword')}}
-      </p>
-    </div>
-    <div class="form-group">
-      <a href ng-click="forgotPassword()">Forgot password?</a>
-      <button type="submit" class="btn btn-primary pull-right">
-        Sign In
+    <div class="form-group text-center">
+      <button type="submit" class="btn btn-primary btn-block">
+        Submit
       </button>
     </div>
   </div>
