--- a/web/public/tpl/modals/signup.html
+++ b/web/public/tpl/modals/signup.html
@@ -4,16 +4,22 @@
   </button>
   <h4 class="modal-title">Sign Up</h4>
 </div>
-<form role="form" name="form" novalidate ng-submit="validate(form, errors) && signup()">
+<form role="form" name="form" novalidate ng-submit="validate(form, errors) && submit()">
   <div class="modal-body">
-    <div class="form-group" ng-class="{'has-error': errors.blankName}">
-      <input type="text" name="name" class="form-control" placeholder="Name" required ng-model="user.name" ng-blur="validateName(form, errors)">
-      <p ng-show="errors.blankName" class="help-block">
-        {{MESSAGE('blankName')}}
+    <div class="form-group" ng-class="{'has-error': errors.blankFirstName}">
+      <input type="text" name="firstName" class="form-control" placeholder="First name" ly-focus required ng-model="user.firstName">
+      <p ng-show="errors.blankFirstName" class="help-block">
+        {{MESSAGE('blankFirstName')}}
+      </p>
+    </div>
+    <div class="form-group" ng-class="{'has-error': errors.blankLastName}">
+      <input type="text" name="lastName" class="form-control" placeholder="Last name" required ng-model="user.lastName">
+      <p ng-show="errors.blankLastName" class="help-block">
+        {{MESSAGE('blankLastName')}}
       </p>
     </div>
     <div class="form-group" ng-class="{'has-error': errors.blankEmail || errors.invalidEmail || errors.registeredEmail}">
-      <input type="email" name="email" class="form-control" placeholder="Email" required ng-model="user.email" ng-blur="validateEmail(form, errors)">
+      <input type="email" name="email" class="form-control" placeholder="Email" required ng-model="user.email">
       <p ng-show="errors.blankEmail" class="help-block">
         {{MESSAGE('blankEmail')}}
       </p>
@@ -25,7 +31,7 @@
       </p>
     </div>
     <div class="form-group" ng-class="{'has-error': errors.blankPassword || errors.invalidPassword}">
-      <input type="password" name="password" class="form-control" placeholder="Password" required ng-model="user.password" ng-minlength="6" ng-blur="validatePassword(form, errors)">
+      <input type="password" name="password" class="form-control" placeholder="Password" required ng-model="user.password" ng-minlength="6">
       <p ng-show="errors.blankPassword" class="help-block">
         {{MESSAGE('blankPassword')}}
       </p>
@@ -34,7 +40,7 @@
       </p>
     </div>
     <div class="form-group text-center">
-      <button type="submit" class="btn btn-primary">
+      <button type="submit" class="btn btn-primary btn-block">
         Sign Up
       </button>
     </div>
