--- a/web/public/tpl/modals/resetpwd.html
+++ b/web/public/tpl/modals/resetpwd.html
@@ -1,1 +1,30 @@
-<h1 class="text-center">Reset Password</h1>
+<div class="modal-header">
+  <button type="button" class="close" ng-click="$dismiss('cancel')">
+    &times;
+  </button>
+  <h4 class="modal-title">Reset Password</h4>
+</div>
+<form role="form" name="form" novalidate ng-submit="validate(form, errors) && submit()">
+  <div class="modal-body">
+    <div class="form-group" ng-class="{'has-error': errors.blankPassword || errors.invalidPassword}">
+      <input type="password" name="password" class="form-control" placeholder="New password" required ng-model="user.password" ng-minlength="6">
+      <p ng-show="errors.blankPassword" class="help-block">
+        {{MESSAGE('blankPassword')}}
+      </p>
+      <p ng-show="errors.invalidPassword" class="help-block">
+        {{MESSAGE('invalidPassword')}}
+      </p>
+    </div>
+    <div class="form-group" ng-class="{'has-error': errors.mismatchPasswords}">
+      <input type="password" name="password2" class="form-control" placeholder="Confirm password" required ng-model="user.password2" ng-minlength="6">
+      <p ng-show="errors.mismatchPasswords" class="help-block">
+        {{MESSAGE('mismatchPasswords')}}
+      </p>
+    </div>
+    <div class="form-group text-center">
+      <button type="submit" class="btn btn-primary btn-block">
+        Reset
+      </button>
+    </div>
+  </div>
+</form>
