--- a/web/public/index.html
+++ b/web/public/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="/bower_components/angular-loading-bar/build/loading-bar.css">
+  <link rel="stylesheet" href="/bower_components/toastr/toastr.css">
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Paytone+One'>
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans'>
   <link rel="stylesheet" href="/css/main.css">
@@ -105,6 +106,7 @@
   <script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
   <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="/bower_components/angular-loading-bar/build/loading-bar.js"></script>
+  <script src="/bower_components/toastr/toastr.js"></script>
   <script src="/bower_components/lodash/dist/lodash.js"></script>
   <script src="/bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
   <script src="/bower_components/jquery-knob/js/jquery.knob.js"></script>
