--- a/web/public/tpl/modals/signup.html
+++ b/web/public/tpl/modals/signup.html
@@ -18,16 +18,13 @@
         {{MESSAGE('blankLastName')}}
       </p>
     </div>
-    <div class="form-group" ng-class="{'has-error': errors.blankEmail || errors.invalidEmail || errors.registeredEmail}">
+    <div class="form-group" ng-class="{'has-error': errors.blankEmail || errors.invalidEmail || errors.emailIsRegistered}">
       <input type="email" name="email" class="form-control" placeholder="Email" required ng-model="user.email">
       <p ng-show="errors.blankEmail" class="help-block">
         {{MESSAGE('blankEmail')}}
       </p>
       <p ng-show="errors.invalidEmail" class="help-block">
         {{MESSAGE('invalidEmail')}}
-      </p>
-      <p ng-show="errors.registeredEmail" class="help-block">
-        {{MESSAGE('registeredEmail')}}
       </p>
     </div>
     <div class="form-group" ng-class="{'has-error': errors.blankPassword || errors.invalidPassword}">
